// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.network;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/network";

// Wifi allows remote wifi setup though shill dbus interface.
service Wifi {
  // InitDUT initialize the DUT for WiFi testing.
  rpc InitDUT(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // InitTestState cleans and sets up the environment for a single WiFi testcase.
  rpc InitTestState(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // TearDown reverts the settings made in InitTestState and InitDUT.
  rpc TearDown(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Connect attempts to connect WiFi network.
  rpc Connect(Config) returns (ConnectResp) {}

  // Disconnect attempts to disconnect from a service.
  rpc Disconnect(Service) returns (google.protobuf.Empty) {}

  // DeleteEntriesForSSID deletes all WiFi profile entries for a given ssid.
  rpc DeleteEntriesForSSID(SSID) returns (google.protobuf.Empty) {}
}

message Config {
  string ssid = 1;
  bool hidden = 2;
}

message Service {
  string path = 1;
}

// ConenctResp is the response of Connect call which includes a Service
// object and timing data of connect (all time in nanosecond unit).
message ConnectResp {
  Service service = 1;
  int64 discovery_time = 2;
  int64 connect_time = 3;
}

message SSID {
  string ssid = 1;
}
